Fixed taskForm bug where it was clickable while hidden on small devices.

--- a/style.css
+++ b/style.css
@@ -317,6 +317,7 @@ li > button:hover {
 
 .hidden {
     display: none;
+    visibility: hidden;
 }
 
 .visuallyhidden {
